Se añadio el enlace de el proyecto dev-company

--- a/index.html
+++ b/index.html
@@ -140,6 +140,30 @@
       <h2>PORTFOLIO</h2>
       <div class="card__container fade_down">
         
+        <!-- Project 6 -->
+        <div class="card">
+          <div class="card__header">
+            <div class="card__figure">
+              <div class="card__image">
+                <img src="images/project6.PNG" alt="proyect">
+              </div>
+            </div>
+          </div>
+
+          <div class="card__body">
+            <h2 class="card__title">Dev Company</h2>
+            <p class="card__copy">This is a landing page project, where <b>'Dev Company'</b> specializes in 
+              providing branding, web design, mobile development, free hosting services to different companies.
+          </div>
+
+          <div class="card__footer">
+            <div class="card__actions">
+              <a href="https://devcompany.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+            </div>
+          </div>
+        </div>
+
+
         <!-- Project 1 -->
         <div class="card">
           <div class="card__header">
