--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
           <div class="card__footer">
             <div class="card__actions">
-              <a href="http://hey-blogger.herokuapp.com/" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+              <a href="https://hey-blogger.000webhostapp.com/" target="_blank" class="btn btn-primary">SEE PROJECT</a>
             </div>
           </div>
         </div>
