--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="scroll-suave main-menu__link" href="#about">About me</a>
           </li>
           <li class="main-menu__item">
-            <a class="scroll-suave main-menu__link" href="#portfolio">Portfolio</a>
+            <a class="scroll-suave main-menu__link" href="#portfolio">Projects</a>
           </li>
           <li class="main-menu__item">
             <a class="scroll-suave main-menu__link" href="#contact">Contact</a>
@@ -50,7 +50,7 @@
             <a class="scroll-suave main-menu__link" href="#about">About me</a>
           </li>
           <li class="main-menu__item">
-            <a class="scroll-suave main-menu__link" href="#portfolio">Portfolio</a>
+            <a class="scroll-suave main-menu__link" href="#portfolio">Projects</a>
           </li>
           <li class="main-menu__item">
             <a class="scroll-suave main-menu__link" href="#contact">Contact</a>
@@ -81,7 +81,7 @@
 
     <!-- Section about me -->
     <section id="about" class="about">
-      <h2>ABOUT ME</h2>
+      <h2>< ABOUT ME /></h2>
       <div class="about__container">
         <img src="images/perfil2.png" alt="Profile picture" class="about__container--img fade_left">
         <p class="about__container--descrip fade_right">
@@ -137,7 +137,7 @@
 
     <!-- Section Portfolio -->
     <section id="portfolio" class="portfolio">
-      <h2>PORTFOLIO</h2>
+      <h2>< PROJECTS /></h2>
       <div class="card__container fade_down">
         
         <!-- Project 6 -->
@@ -285,7 +285,7 @@
 
     <!-- Section Contact -->
     <section id="contact" class="contact">
-      <h2>CONCTACT</h2>
+      <h2>< CONCTACT /></h2>
       <form action="https://formsubmit.co/david381dc@gmail.com" method="POST" name="formulario_contacto" class="contact-container">
         <div class="input-group fade_left">
           <input type="text" name="name" class="input-group__input" placeholder="Name" required>
@@ -319,4 +319,5 @@
 <script src="js/menuMobile.js"></script>
 <script src="js/validationForm.js"></script>
 <script src="js/scrollEfects.js"></script>
+<script src="js/darkMode.js"></script>
 </html>
