Se cambio un poco el index

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="about__container">
         <img src="images/perfil2.png" alt="Profile picture" class="about__container--img fade_left">
         <p class="about__container--descrip fade_right">
-          Hi, my name is David Cayo and I am a Systems Analyst and self-taught web developer.
+          Hi, my name is David Cayo, I am a Systems Analyst and self-taught web developer.
           <br>
           <br>
           I love the front-end technologies, and I like to give web pages that first impression that makes users stay on them.
