Se cambio la vista de proyectos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <script src="https://kit.fontawesome.com/71c9559db8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
   <title>David Cayo</title>
 </head>
@@ -138,147 +139,172 @@
     <!-- Section Portfolio -->
     <section id="portfolio" class="portfolio">
       <h2>< PROJECTS /></h2>
-      <div class="card__container fade_down">
+      <div class="contenedor-slider">
+        <div id="slider" class="slider">
+          <div class="card__container fade_down">
         
-        <!-- Project 6 -->
-        <div class="card">
-          <div class="card__header">
-            <div class="card__figure">
-              <div class="card__image">
-                <img src="images/project6.PNG" alt="proyect">
+            <!-- Project 1 -->
+            <div class="slide">
+              <div class="card">
+                <div class="card__header">
+                  <div class="card__figure">
+                    <div class="card__image">
+                      <img src="images/project1.PNG" alt="">
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="card__body">
+                  <h2 class="card__title">Agency-AB</h2>
+                  <p class="card__copy">This is a landing page project, where <b>'Agency-AB'</b> specializes in 
+                    providing branding and design services to different companies.
+                </div>
+  
+                <div class="card__footer">
+                  <div class="card__actions">
+                    <a href="https://github.com/david-dc381/Agency-SB" target="_blank" class="btn btn-primary"> <i class="fa-brands fa-github"></i> CODE</a>
+                    <a href="https://agency-ab.netlify.app" target="_blank" class="btn btn-primary"> <i class="fa-solid fa-eye"></i> DEMO</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="slide">
+              <div class="card">
+                <div class="card__header">
+                  <div class="card__figure">
+                    <div class="card__image">
+                      <img src="images/project2.PNG" alt="second project">
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="card__body">
+                  <h2 class="card__title">BASIC</h2>
+                  <p class="card__copy">This is a landing page project about <b>'Basic'</b> a company that offers
+                    its service building landing pages or App sites using Sass as technology.
+                  </p>
+                </div>
+  
+                <div class="card__footer">
+                  <div class="card__actions">
+                    <a href="https://basic-company.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="slide">
+              <div class="card">
+                <div class="card__header">
+                  <div class="card__figure">
+                    <div class="card__image">
+                      <img src="images/project3.PNG" alt="third project">
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="card__body">
+                  <h2 class="card__title">Coffe & Cake</h2>
+                  <p class="card__copy">This is a landing page project, <b>'Coffee & Cake'</b> is a very famous bakery in town 
+                    that receives orders and delivers them to your home.</p>
+                </div>
+  
+                <div class="card__footer">
+                  <div class="card__actions">
+                    <a href="https://coffee-and-cake.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="slide">
+              <div class="card">
+                <div class="card__header">
+                  <div class="card__figure">
+                    <div class="card__image">
+                      <img src="images/project4.png" alt="fourth project">
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="card__body">
+                  <h2 class="card__title">S-Design Studio</h2>
+                  <p class="card__copy">It is a landing page project about <b>'S-Design Studio'</b> which is a company specialized
+                    in creating designs for international companies.</p>
+                </div>
+  
+                <div class="card__footer">
+                  <div class="card__actions">
+                    <a href="https://sdesign-studio.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 5 -->
+            <div class="slide">
+              <div class="card">
+                <div class="card__header">
+                  <div class="card__figure">
+                    <div class="card__image">
+                      <img src="images/project5.png" alt="fifth project">
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="card__body">
+                  <h2 class="card__title">Hey Blogger :)</h2>
+                  <p class="card__copy"><b>'Hey Blogger :)'</b> is a personal blog project where are published articles about technology in general,
+                    it was built with the laravel framework technology.</p>
+                </div>
+  
+                <div class="card__footer">
+                  <div class="card__actions">
+                    <a href="https://hey-blogger.000webhostapp.com/" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 6 -->
+            <div class="slide">
+              <div class="card">
+                <div class="card__header">
+                  <div class="card__figure">
+                    <div class="card__image">
+                      <img src="images/project6.PNG" alt="proyect">
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="card__body">
+                  <h2 class="card__title">Dev Company</h2>
+                  <p class="card__copy">This is a landing page project, where <b>'Dev Company'</b> specializes in 
+                    providing branding, web design, mobile development, free hosting services to different companies.
+                </div>
+  
+                <div class="card__footer">
+                  <div class="card__actions">
+                    <a href="https://devcompany.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="card__body">
-            <h2 class="card__title">Dev Company</h2>
-            <p class="card__copy">This is a landing page project, where <b>'Dev Company'</b> specializes in 
-              providing branding, web design, mobile development, free hosting services to different companies.
-          </div>
-
-          <div class="card__footer">
-            <div class="card__actions">
-              <a href="https://devcompany.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
-            </div>
-          </div>
+        </div>
+        <!-- Flechas de anterior y siguiente -->
+        <div class="btn-anterior" id="btnAnterior">
+          <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        </div>
+        <div class="btn-siguiente" id="btnSiguiente">
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </div>
 
-
-        <!-- Project 1 -->
-        <div class="card">
-          <div class="card__header">
-            <div class="card__figure">
-              <div class="card__image">
-                <img src="images/project1.PNG" alt="">
-              </div>
-            </div>
-          </div>
-
-          <div class="card__body">
-            <h2 class="card__title">Agency-AB</h2>
-            <p class="card__copy">This is a landing page project, where <b>'Agency-AB'</b> specializes in 
-              providing branding and design services to different companies.
-          </div>
-
-          <div class="card__footer">
-            <div class="card__actions">
-              <a href="https://agency-ab.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 2 -->
-        <div class="card">
-          <div class="card__header">
-            <div class="card__figure">
-              <div class="card__image">
-                <img src="images/project2.PNG" alt="second project">
-              </div>
-            </div>
-          </div>
-
-          <div class="card__body">
-            <h2 class="card__title">BASIC</h2>
-            <p class="card__copy">This is a landing page project about <b>'Basic'</b> a company that offers
-               its service building landing pages or App sites using Sass as technology.
-            </p>
-          </div>
-
-          <div class="card__footer">
-            <div class="card__actions">
-              <a href="https://basic-company.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 3 -->
-        <div class="card">
-          <div class="card__header">
-            <div class="card__figure">
-              <div class="card__image">
-                <img src="images/project3.PNG" alt="third project">
-              </div>
-            </div>
-          </div>
-
-          <div class="card__body">
-            <h2 class="card__title">Coffe & Cake</h2>
-            <p class="card__copy">This is a landing page project, <b>'Coffee & Cake'</b> is a very famous bakery in town 
-              that receives orders and delivers them to your home.</p>
-          </div>
-
-          <div class="card__footer">
-            <div class="card__actions">
-              <a href="https://coffee-and-cake.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 4 -->
-        <div class="card">
-          <div class="card__header">
-            <div class="card__figure">
-              <div class="card__image">
-                <img src="images/project4.png" alt="fourth project">
-              </div>
-            </div>
-          </div>
-
-          <div class="card__body">
-            <h2 class="card__title">S-Design Studio</h2>
-            <p class="card__copy">It is a landing page project about <b>'S-Design Studio'</b> which is a company specialized
-               in creating designs for international companies.</p>
-          </div>
-
-          <div class="card__footer">
-            <div class="card__actions">
-              <a href="https://sdesign-studio.netlify.app" target="_blank" class="btn btn-primary">SEE PROJECT</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Project 5 -->
-        <div class="card">
-          <div class="card__header">
-            <div class="card__figure">
-              <div class="card__image">
-                <img src="images/project5.png" alt="fifth project">
-              </div>
-            </div>
-          </div>
-
-          <div class="card__body">
-            <h2 class="card__title">Hey Blogger :)</h2>
-            <p class="card__copy"><b>'Hey Blogger :)'</b> is a personal blog project where are published articles about technology in general,
-               it was built with the laravel framework technology.</p>
-          </div>
-
-          <div class="card__footer">
-            <div class="card__actions">
-              <a href="https://hey-blogger.000webhostapp.com/" target="_blank" class="btn btn-primary">SEE PROJECT</a>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </section>
     <!-- End section portfolio -->
@@ -320,4 +346,6 @@
 <script src="js/validationForm.js"></script>
 <script src="js/scrollEfects.js"></script>
 <script src="js/darkMode.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="js/slider.js"></script>
 </html>
