--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <script src="https://kit.fontawesome.com/71c9559db8.js" crossorigin="anonymous"></script>
+  <meta property="og:image" itemprop="image"
+    content="https://david-cayo.netlify.app/./img/preview-img.png">
   <link rel="stylesheet" href="css/styles.css">
   <title>David Cayo</title>
 </head>
