--- a/index.html
+++ b/index.html
@@ -54,19 +54,15 @@
         <i class="fa-regular fa-circle-xmark close-image" id="close-image"></i>
         <ul class="main-menu__list">
           <li class="main-menu__item">
-            <i class="fa-solid fa-house"></i> &nbsp;
             <a class="volver-arriba main-menu__link" href="#">Home</a>
           </li>
           <li class="main-menu__item">
-            <i class="fa-solid fa-user"></i> &nbsp;
             <a class="scroll-suave main-menu__link" href="#about">About me</a>
           </li>
           <li class="main-menu__item">
-            <i class="fa-solid fa-folder-open"></i> &nbsp;
             <a class="scroll-suave main-menu__link" href="#portfolio">Projects</a>
           </li>
           <li class="main-menu__item">
-            <i class="fa-solid fa-comment-dots"></i> &nbsp;
             <a class="scroll-suave main-menu__link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -83,7 +79,7 @@
     <section class="main-banner">
       <div class="main-banner__name">
         <h1 class="main-banner__title animate__animated animate__bounceInDown animate__delay-1s">Hello, <span>my name is</span> David Cayo
-          <p class="main-banner__copy">and I am a web designer 🚀</p>
+          <p class="main-banner__copy">I am a UI Developer 🚀</p>
         </h1>
       </div>
       <div class="main-banner__photo animate__animated animate__bounceIn animate__delay-2s">
