Se hizo algunos cambios de estilos y contenido

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     providing branding, web design, mobile development, free hosting services to different companies.
                 </div>
   
-                <div>
+                <div class="tag_container">
                   <span class="tag">HTML</span>
                   <span class="tag">CSS</span>
                   <span class="tag">JS</span>
@@ -391,7 +391,7 @@
               providing branding and design services to different companies.
           </div>
 
-          <div>
+          <div class="tag_container">
             <span class="tag">HTML</span>
             <span class="tag">CSS</span>
             <span class="tag">JS</span>
